--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "rogerramos.me",
   "private": true,
   "description": "Front-end of My Website",
   "version": "0.2.0",
@@ -17,7 +17,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.1.3"
   },
   "keywords": [
     "gatsby"
@@ -25,6 +26,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
+    "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "format": "prettier --write \"src/**/*.js\""
