--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-google-tagmanager": "^2.0.7",
     "gatsby-plugin-manifest": "^2.0.9",
+    "gatsby-plugin-netlify-cms": "^3.0.10",
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-sharp": "^2.0.18",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
+    "netlify-cms": "^2.3.3",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
+    "sharp": "^0.21.3",
     "styled-components": "^4.1.3"
   },
   "keywords": [
@@ -30,6 +34,7 @@
     "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
     "develop": "gatsby develop",
     "start": "npm run develop",
+    "serve": "gatsby serve",
     "format": "prettier --write \"src/**/*.js\""
   },
   "devDependencies": {
