--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,15 +5,17 @@ backend:
 media_folder: static/assets
 public_folder: assets
 
+display_url: https://rogerramos.me
+
 collections:
   - name: Log Entries
     label: LogEntries
     folder: entries
     create: true
     fields:
-      - {name: path, label: Path }
+      - { name: path, label: Path }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
-      - { name: body, label: Body, widget: markdown }
       - { name: hero, label: Hero, widget: image }
-      - { name : tags, label: Tags, widget: list }
+      - { label: "Tags", name: "tags", widget: "list", default: ["javascript"] }
+      - { name: body, label: Body, widget: markdown }
