--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.18",
-    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-filesystem": "^2.0.17",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "netlify-cms": "^2.3.3",
@@ -32,6 +32,7 @@
   "scripts": {
     "build": "gatsby build",
     "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
+    "build:local": "npm run build && npm run serve",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
