--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.6.0",
   "author": "Roger Ramos <@rodgerpaulo>",
   "dependencies": {
+    "date-fns": "^1.30.1",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-google-fonts": "0.0.4",
