--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.18",
+    "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-filesystem": "^2.0.17",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "netlify-cms": "^2.3.3",
+    "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
