--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.8.1",
   "author": "Roger Ramos <@rodgerpaulo>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "date-fns": "^1.30.1",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
@@ -15,6 +16,7 @@
     "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.18",
+    "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-filesystem": "^2.0.17",
     "gatsby-transformer-remark": "^2.2.0",
