--- a/package.json
+++ b/package.json
@@ -4,9 +4,53 @@
   "description": "Front-end of My Website",
   "version": "0.8.3",
   "author": "Roger Ramos <@rodgerpaulo>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rodgerpaulo/rogerramos.me"
+  },
+  "bugs": {
+    "url": "https://github.com/rodgerpaulo/rogerramos.me/issues"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "scripts": {
+    "build": "gatsby build",
+    "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
+    "build:local": "npm run build && npm run serve",
+    "serve:docker": "docker run -p 8080:80 $npm_package_name:$npm_package_version",
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "format": "prettier --write \"src/**/*.js\"",
+    "lint-staged": "lint-staged",
+    "lintcss": "stylelint --config .stylelintrc src/styles/**/*.scss",
+    "lintjs": "eslint -c .eslintrc src/javascripts/**/*"
+  },
+  "pre-commit": "lint-staged",
+  "lint-staged": {
+    "src/javascripts/**/*.js": [
+      "eslint",
+      "git add"
+    ],
+    "src/javascripts/**/*.jsx": [
+      "eslint",
+      "git add"
+    ]
+  },
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "date-fns": "^1.30.1",
+    "eslint-config-google": "^0.11.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-compat": "^2.6.3",
+    "eslint-plugin-flowtype": "^3.2.1",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-google-fonts": "0.0.4",
@@ -22,6 +66,7 @@
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "netlify-cms": "^2.3.3",
+    "pre-commit": "^1.2.2",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
@@ -30,28 +75,8 @@
     "sharp": "^0.21.3",
     "styled-components": "^4.1.3"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "build:docker": "docker build -t $npm_package_name:$npm_package_version .",
-    "build:local": "npm run build && npm run serve",
-    "serve:docker": "docker run -p 8080:80 $npm_package_name:$npm_package_version",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "format": "prettier --write \"src/**/*.js\""
-  },
   "devDependencies": {
-    "prettier": "^1.15.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rodgerpaulo/rogerramos.me"
-  },
-  "bugs": {
-    "url": "https://github.com/rodgerpaulo/rogerramos.me/issues"
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.16.1"
   }
 }
