--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "serve": "gatsby serve",
     "format": "prettier --write \"src/**/*.js\"",
     "lint-staged": "lint-staged",
-    "lintjs": "eslint -c .eslintrc src/**/*"
+    "lintjs": "eslint -c .eslintrc src/**/*.js"
   },
   "pre-commit": "lint-staged",
   "lint-staged": {
