--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sharp": "^2.0.19",
+    "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-remark-prismjs": "^3.2.3",
     "gatsby-source-filesystem": "^2.0.18",
