--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rogerramos.me",
-  "private": true,
+  "private": false,
   "description": "Front-end of My Website",
   "version": "0.11.1",
   "author": "Roger Ramos <@rodgerpaulo>",
