--- a/package.json
+++ b/package.json
@@ -39,44 +39,45 @@
     ]
   },
   "dependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
+    "babel-eslint": "^10.0.2",
+    "babel-plugin-styled-components": "^1.10.6",
     "date-fns": "^1.30.1",
-    "eslint-config-google": "^0.11.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-compat": "^2.6.3",
-    "eslint-plugin-flowtype": "^3.2.1",
-    "eslint-plugin-import": "^2.15.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "gatsby": "^2.0.106",
-    "gatsby-image": "^2.0.29",
-    "gatsby-plugin-google-fonts": "0.0.4",
-    "gatsby-plugin-google-tagmanager": "^2.0.8",
-    "gatsby-plugin-manifest": "^2.0.15",
-    "gatsby-plugin-netlify-cms": "^3.0.11",
-    "gatsby-plugin-offline": "^2.0.23",
-    "gatsby-plugin-react-helmet": "^3.0.5",
-    "gatsby-plugin-sharp": "^2.0.19",
-    "gatsby-plugin-sitemap": "^2.0.4",
-    "gatsby-plugin-styled-components": "^3.0.4",
-    "gatsby-remark-prismjs": "^3.2.3",
-    "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-transformer-remark": "^2.2.2",
-    "gatsby-transformer-sharp": "^2.1.13",
-    "netlify-cms": "^2.3.3",
+    "eslint-config-google": "^0.13.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-compat": "^3.3.0",
+    "eslint-plugin-flowtype": "^3.12.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "gatsby": "^2.13.39",
+    "gatsby-image": "^2.2.6",
+    "gatsby-plugin-google-fonts": "1.0.1",
+    "gatsby-plugin-google-tagmanager": "^2.1.4",
+    "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
+    "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-sitemap": "^2.2.3",
+    "gatsby-plugin-styled-components": "^3.1.2",
+    "gatsby-remark-prismjs": "^3.3.3",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-remark": "^2.6.9",
+    "gatsby-transformer-sharp": "^2.2.4",
+    "netlify-cms": "^2.9.7",
     "pre-commit": "^1.2.2",
-    "prismjs": "^1.15.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "sharp": "^0.21.3",
-    "styled-components": "^4.1.3"
+    "prismjs": "^1.17.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-social-icons": "^4.1.0",
+    "sharp": "^0.22.1",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.16.1"
+    "lint-staged": "^9.2.1",
+    "prettier": "^1.18.2"
   }
 }
