--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gatsby-image": "^2.2.6",
     "gatsby-plugin-google-fonts": "1.0.1",
     "gatsby-plugin-google-tagmanager": "^2.1.4",
+    "gatsby-plugin-html2amp": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-offline": "^2.2.4",
@@ -77,6 +78,7 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "amphtml-validator": "^1.0.23",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2"
   }
