--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
     "eslint-plugin-react": "^7.14.3",
     "gatsby": "^2.13.39",
     "gatsby-image": "^2.2.6",
-    "gatsby-plugin-google-fonts": "1.0.1",
     "gatsby-plugin-google-tagmanager": "^2.1.4",
     "gatsby-plugin-html2amp": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.2",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-plugin-sitemap": "^2.2.3",
